# crane

./: index.css  index.html  package.json  pnpm-lock.yaml  readme.md  tsconfig.json  vite.config.js  vite.config.ts
effector/endeffector/: endeffector.h  endeffector.prj  endeffector.xml  log_configuration.txt
effector/microcontroller/easycat/: endeffector.h  endeffector.prj  endeffector.xml  log_configuration.txt
effector/src/gamepad/: CMakeLists.txt  controller_plugin.xml  gamepad.xml  hardware_plugin.xml  package.xml
effector/src/gamepad/config/: gamepad.yaml  gamepad_controller.yaml  gamepad_hardware.yaml
effector/src/gamepad/include/gamepad/: gamepad.hpp  gamepad_controller.hpp  gamepad_hardware.hpp  gamepad_publisher.hpp
effector/src/gamepad/launch/: gamepad.launch.py
effector/src/gamepad/src/: gamepad.cpp  gamepad_controller.cpp  gamepad_hardware.cpp  gamepad_publisher.cpp
effector/src/gamepad/urdf/: gamepad.urdf.xacro
effector/src/remote_control/: CMakeLists.txt  package.xml  remote_control.xml  remote_control_controller.xml
effector/src/remote_control/config/: remote_control.yaml  remote_control_hardware.yaml
effector/src/remote_control/description/: controller.urdf.xacro  ros2_control.xacro
effector/src/remote_control/include/remote_control/: remote_control.hpp  remote_control_publisher.hpp
effector/src/remote_control/launch/: remote_control.launch.py  test_remote_control.launch.py
effector/src/remote_control/src/: remote_control.cpp  remote_control_publisher.cpp
ros/: .gitignore  README.md  source.sh  source.zsh
ros/install/: local_setup.sh  setup.sh
ros/log/: latest_build
ros/src/controller/: CMakeLists.txt  controller_description.xml  package.xml
ros/src/controller/bringup/config/: controller.yaml
ros/src/controller/bringup/launch/: controller.launch.py
ros/src/controller/description/: controller.urdf.xacro  ros2_control.xacro
ros/src/controller/include/controller/: control.hpp  controller.hpp  visibility_control.h
ros/src/controller/src/: control.cpp  controller.cpp
ros/src/cpp_pubsub/: package.xml
ros/src/drive-train/: CMakeLists.txt  package.xml
ros/src/drive-train/src/: drive-train.cpp  movement.cpp
ros/src/drivetrain/: CMakeLists.txt  package.xml
ros/src/drivetrain/src/: drivetrain.cpp  left_motor.cpp  right_motor.cpp
ros/src/excavation/: CMakeLists.txt  package.xml
ros/src/excavation/src/: excavation.cpp  hopper.cpp  linear_actuator.cpp
ros/src/hopper/: CMakeLists.txt  package.xml
ros/src/hopper/include/hopper/: hopper_macros.h  visibility_control.h
ros/src/hopper/src/: hopper.cpp  linear_actuator.cpp  linear_actuator_action_client.cpp  linear_actuator_action_server.cpp
ros/src/interfaces/: CMakeLists.txt  package.xml
ros/src/interfaces/action/: MoveLinearActuator.action
ros/src/interfaces/msg/: LinearActuatorState.msg  MotorSpeed.msg
ros/src/interfaces/srv/: LinearActuator.srv
ros/src/rover-control/: CMakeLists.txt  package.xml
ros/src/rover-control/src/: control.cpp
ros/src/testing_package/: CMakeLists.txt  package.xml
ros/src/vision/: CMakeLists.txt  package.xml
ros/src/vision/src/: vision.cpp
src/: crane.js  globals.js  main.js  main.ts
web/: index.css  index.html  pnpm-lock.yaml
web/src/: crane.js  globals.js
