<?xml version="1.0"?>
<package format="3">
  <name>gamepad</name>
  <version>0.0.0</version>
  <description>Gamepad input hardware interface for ros2_control</description>
  <maintainer email="camscheet@gmail.com">rae</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>hardware_interface</depend>
  <depend>controller_interface</depend>
  <depend>pluginlib</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <pluginlib plugin="${prefix}/hardware_plugin.xml"/>
    <pluginlib plugin="${prefix}/controller_plugin.xml"/>
  </export>
</package>