<?xml version="1.0"?>
<package format="3">
  <name>remote_control</name>
  <version>0.0.0</version>
  <description>ROS2 package for joystick/gamepad hardware interface and controller</description>
  <maintainer email="camscheet@gmail.com">rae</maintainer>
  <license>UNLICENSED</license>

  <!-- Build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>controller_interface</depend>

  <!-- Optional testing-->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
